--- a/11.CSS_특수효과/1.before_after.html
+++ b/11.CSS_특수효과/1.before_after.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>before after</title>
+    <style>
+      body {
+        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+        background: #000;
+        color: #fff;
+      }
+
+      .is-required::before {
+        content: "⭐";
+        color: white;
+        padding-right: 2px;
+      }
+
+      .is-required::after {
+        content: "⭐";
+        color: white;
+        padding-left: 2px;
+      }
+
+      header {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+      header h1 {
+        /* px은 정확한 길이, rem은 16px, em은 현재 폰트 사이즈 */
+        font-size: 6rem;
+        margin: 1rem;
+      }
+      header::before {
+        content: "";
+        background: url("https://source.unsplash.com/1600x900/?nature,water")
+          no-repeat center;
+        background-size: cover;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 0.5;
+        z-index: -1;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- <label class="is-required" for="name">Name</label> 
+    <input type="text" /> -->
+    <header>
+      <h1>Hello World</h1>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam, hic!
+      </p>
+    </header>
+  </body>
 </html>
