--- a/12.Profile_Card/Profile_Card_UI_Design.html
+++ b/12.Profile_Card/Profile_Card_UI_Design.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile Card UI Design</title>
-    <style>
-      /* Google Fonts - Poppins */
-      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="profile-card">
