--- a/13.NETFLIX/index.html
+++ b/13.NETFLIX/index.html
@@ -17,5 +17,29 @@
     <nav>
       <a href=""><img src="images/netfl.svg" alt="" /></a>
     </nav>
+
+    <!-- login form -->
+    <div class="form-wrapper">
+      <h2>로그인</h2>
+      <form action="#">
+        <div class="form-control">
+          <input type="text" required />
+          <label>이메일 주소 또는 전화번호</label>
+        </div>
+        <div class="form-control">
+          <input type="password" required />
+          <label>비밀번호</label>
+        </div>
+        <button type="submit">로그인</button>
+        <div class="form-help">
+          <div class="remember-me">
+            <input type="checkbox" id="remember-me" />
+            <label for="remember-me">로그인 정보 저장</label>
+          </div>
+          <a href="#">도움이 필요하신가요?</a>
+        </div>
+      </form>
+    </div>
+    <!-- //login form -->
   </body>
 </html>
