--- a/13.NETFLIX/index.html
+++ b/13.NETFLIX/index.html
@@ -39,6 +39,13 @@
           <a href="#">도움이 필요하신가요?</a>
         </div>
       </form>
+
+      <p>Netflix 회원이 아닌가요? <a href="#">지금 가입하세요.</a></p>
+			<small>
+				이 페이지는 Google reCAPTCHA의 보호를 받아 사용자가 로봇이 아님을 확인합니다.
+				<a href="#">자세히 알아보기.</a>
+			</small>
+      
     </div>
     <!-- //login form -->
   </body>
