--- a/14.ImageGallery/index.html
+++ b/14.ImageGallery/index.html
@@ -30,5 +30,23 @@
         <li class="img"><img src="images/img14.jpg" alt="" /></li>
       </ul>
     </section>
+
+    <!-- 이미지 클릭 시 나오는 팝업 -->
+    <div class="lightbox">
+      <div class="wrapper">
+        <header>
+          <div class="details">
+            <i class="uil uil-camera"></i>
+            <span>Image Preview</span>
+          </div>
+          <div class="buttons"><i class="close-icon uil uil-times"></i></div>
+        </header>
+        <div class="preview-img">
+          <div class="img"><img src="" alt="preview-img" /></div>
+        </div>
+      </div>
+    </div>
+
+    <script src="app.js"></script>
   </body>
 </html>
